# iot-eclipse

.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Onboard.1551730734768.pdom  Onboard.1551734686104.pdom  TestIOT.1551719334756.pdom  Timeseries.1551793055835.pdom
.metadata/.plugins/org.eclipse.cdt.managedbuilder.core/buildState/Onboard/: Onboard
.metadata/.plugins/org.eclipse.cdt.managedbuilder.core/buildState/TestIOT/: TestIOT
.metadata/.plugins/org.eclipse.cdt.managedbuilder.core/buildState/Timeseries/: Timeseries
.metadata/.plugins/org.eclipse.cdt.managedbuilder.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/Onboard/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/Onboard/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/TestIOT/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Timeseries/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/Timeseries/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 12.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: New configuration.launch  TCF Agent.launch
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.mpc.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2019/3/10/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.tcf.te.runtime.persistence/: .history
.metadata/.plugins/org.eclipse.tcf.te.tcf.launch.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.tcf.te.tcf.locator/.peers/: TCF_Agent.peer
.metadata/.plugins/org.eclipse.tcf.te.ui/: dialog_settings.xml  viewerstates.xml
.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
MindConnect_Library_V3.1.3.0/: CHANGELOG.md  CMakeLists.txt  README.md  ReadMe_OSS.htm
MindConnect_Library_V3.1.3.0/doc/: CMakeLists.txt  mcl.doxyfile
MindConnect_Library_V3.1.3.0/examples/: callbacks.h  critical_section.cpp  critical_section.h  event.c  file_upload.c  multi_process_agent.c  onboard_dsc_upload.c  timeseries_upload.c
MindConnect_Library_V3.1.3.0/include/mcl/: mcl.h  mcl_common.h  mcl_communication.h  mcl_config_setup.h  mcl_configuration.h  mcl_custom_data.h  mcl_data_source_configuration.h  mcl_event.h  mcl_json_util.h  mcl_list.h  mcl_log_util.h  mcl_random.h  mcl_store.h  mcl_stream_data.h  mcl_time_series.h
MindConnect_Library_V3.1.3.0/lib/cJSON/: CMakeLists.txt  cJSON.c
MindConnect_Library_V3.1.3.0/lib/zf_log/: CMakeLists.txt  zf_log.c  zf_log.h
MindConnect_Library_V3.1.3.0/src/: CMakeLists.txt  base64.c  base64.h  communication.c  communication.h  config.h.cmake  configuration.c  configuration.h  custom_data.c  custom_data.h  data_source_configuration.c  data_source_configuration.h  data_types.c  data_types.h  definitions.h  event.c  event.h  event_list.c  event_list.h  file.c  file.h  file_util.c  file_util.h  hmac.c  hmac.h  http_client.h  http_client_libcurl.c  http_client_libcurl.h  http_definitions.c  http_definitions.h  http_processor.c  http_processor.h  http_request.c  http_request.h  http_response.c  http_response.h  json.c  json.h  json_util.c  json_util.h  (+31 more)
MindConnect_Library_V3.1.3.0/test/: CMakeLists.txt
MindConnect_Library_V3.1.3.0/test/integration/: CMakeLists.txt  test_exchange.c  test_exchange_mixed_type.c  test_onboard.c  test_onboard_rsa.c  test_rotate_key.c  test_rotate_key_rsa.c  test_stream.c
MindConnect_Library_V3.1.3.0/test/unit/: CMakeLists.txt  test_base64.c  test_configuration.c  test_custom_data.c  test_data_source_configuration.c  test_data_types.c  test_event.c  test_event_list.c  test_file.c  test_file_util.c  test_hmac.c  test_http_client_libcurl.c  test_http_processor.c  test_http_processor_exchange.c  test_http_request.c  test_http_response.c  test_json.c  test_json_util.c  test_jwt.c  test_list.c  test_log_util.c  test_mcl_communication.c  test_mcl_json_util.c  test_memory.c  test_random.c  test_security_handler.c  test_security_libcrypto.c  test_storage.c  test_store.c  test_string_array.c  test_string_type.c  test_time_series.c  test_time_util.c
Onboard/: .cproject  .project  example.c  onboard_dsc_upload.c  onboard_dsc_upload.h
Onboard/IOT2000 Release/: Onboard
TestIOT/: .cproject  .project  example.cpp
TestIOT/IOT2000 Release/: TestIOT
Timeseries/: .cproject  .project  callbacks.c  example.c  timeseries_upload.c  timeseries_upload.h
Timeseries/IOT2000 Release/: Timeseries
